Fix overlapping main container content

--- a/less/globals.less
+++ b/less/globals.less
@@ -19,7 +19,7 @@ body {
 
 .main {
   .flexCenter();
-  height: 94vh;
+  min-height: 94vh;
   padding-top: 6vh;
 }
 
